--- a/app/src/main/res/layout/fragment_fix.xml
+++ b/app/src/main/res/layout/fragment_fix.xml
@@ -43,7 +43,7 @@
 
                 android:layout_margin="10dp"
                 android:layout_marginTop="48dp"
-                android:text="last saved fixer"
+                android:text="@string/text_fix_save"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
