--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -21,8 +21,8 @@
     <ProgressBar
         android:layout_width="312dp"
         android:layout_height="275dp"
+        android:layout_marginTop="118dp"
         android:layout_marginRight="36dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="118dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
