--- a/app/src/main/res/layout/fragment_fix.xml
+++ b/app/src/main/res/layout/fragment_fix.xml
@@ -46,14 +46,12 @@
                 android:text="@string/text_fix_save"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
             <ImageButton
                 android:id="@+id/btn_fix_save"
                 android:layout_width="@dimen/button_margin"
                 android:layout_height="@dimen/button_margin"
-
-
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="bottom|center"
+                android:layout_margin="18dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginBottom="18dp"
                 android:background="@drawable/roundedbutton"
@@ -65,11 +63,13 @@
                 android:layout_height="wrap_content"
 
                 android:layout_margin="10dp"
-                android:layout_marginBottom="74dp"></ExpandableListView>
+                android:layout_marginBottom="74dp">
+
+
+            </ExpandableListView>
+
 
         </LinearLayout>
-
-
 
 
     </ScrollView>
