--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -3,101 +3,130 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    android:layout_margin="10dp"
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_join">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/edit_join_titre"
+    <ScrollView
+        android:id="@+id/join_ScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        android:text="@string/fragment_join" />
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
 
-    <EditText
-        android:id="@+id/edit_join_town"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_join_titre"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:ems="14"
-        android:hint="@string/join_town"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/edit_join_mag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_join_town"
-        android:layout_alignStart="@+id/edit_join_town"
-        android:layout_alignLeft="@+id/edit_join_town"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="15dp"
-        android:ems="14"
-        android:hint="@string/join_mag"
-        android:inputType="textPersonName" />
+            <TextView
+                android:id="@+id/edit_join_titre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="@string/fragment_join" />
 
-    <EditText
-        android:id="@+id/edit_join_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_join_mag"
-        android:layout_alignStart="@+id/edit_join_mag"
-        android:layout_alignLeft="@+id/edit_join_mag"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="15dp"
-        android:ems="14"
-        android:hint="@string/join_type"
-        android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/edit_join_town"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edit_join_titre"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="15dp"
+                android:ems="14"
+                android:hint="@string/join_town"
+                android:inputType="textPersonName"
+                android:selectAllOnFocus="true" />
 
-    <EditText
-        android:id="@+id/edit_join_qualif"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_join_type"
-        android:layout_alignStart="@+id/edit_join_type"
-        android:layout_alignLeft="@+id/edit_join_type"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="15dp"
-        android:ems="14"
-        android:hint="@string/join_qualif"
-        android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/edit_join_mag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edit_join_town"
+                android:layout_alignStart="@+id/edit_join_town"
+                android:layout_alignLeft="@+id/edit_join_town"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:ems="14"
+                android:hint="@string/join_mag"
+                android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/edit_join_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_join_qualif"
-        android:layout_alignStart="@+id/edit_join_qualif"
-        android:layout_alignLeft="@+id/edit_join_qualif"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="15dp"
-        android:ems="14"
-        android:hint="@string/join_phone"
-        android:inputType="phone" />
+            <EditText
+                android:id="@+id/edit_join_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edit_join_mag"
+                android:layout_alignStart="@+id/edit_join_mag"
+                android:layout_alignLeft="@+id/edit_join_mag"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:ems="14"
+                android:hint="@string/join_type"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/edit_join_qualif"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edit_join_type"
+                android:layout_alignStart="@+id/edit_join_type"
+                android:layout_alignLeft="@+id/edit_join_type"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:ems="14"
+                android:hint="@string/join_qualif"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/edit_join_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edit_join_qualif"
+                android:layout_alignStart="@+id/edit_join_qualif"
+                android:layout_alignLeft="@+id/edit_join_qualif"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:ems="14"
+                android:hint="@string/join_phone"
+                android:inputType="phone" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:orientation="horizontal">
 
 
-    <ImageButton
-        android:id="@+id/btn_join_mail"
-        android:layout_marginTop="18dp"
-        android:layout_width="@dimen/button_margin"
-        android:layout_height="@dimen/button_margin"
-        android:layout_centerInParent="true"
-        android:layout_below="@+id/edit_join_phone"
-        android:background = "@drawable/roundedbutton"
-        android:src="@drawable/ic_contact_mail"/><!--image drawable on Right side of Text on button-->
+                <ImageButton
+                    android:id="@+id/btn_join_mail"
+                    android:layout_width="@dimen/button_margin"
+                    android:layout_height="@dimen/button_margin"
+                    android:layout_below="@+id/edit_join_phone"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="bottom|center"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginBottom="18dp"
+                    android:background="@drawable/roundedbutton"
+                    android:src="@drawable/ic_contact_mail" /><!--image drawable on Right side of Text on button-->
+            </FrameLayout>
 
-
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
 
 
