--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -6,62 +6,88 @@
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_profil">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/edit_profil_titre"
+    <ScrollView
+        android:id="@+id/profil_ScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:text="@string/fragment_profil" />
+        android:fillViewport="true"
+        android:scrollbars="vertical">
 
-    <EditText
-        android:id="@+id/edit_profil_nom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_profil_titre"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="@string/profil_name"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/edit_profil_mail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_profil_nom"
-        android:layout_alignStart="@+id/edit_profil_nom"
-        android:layout_alignLeft="@+id/edit_profil_nom"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:hint="@string/profil_email"
-        android:inputType="textEmailAddress" />
+            <TextView
+                android:id="@+id/edit_profil_titre"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/fragment_profil" />
 
-    <EditText
-        android:id="@+id/edit_profil_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_profil_mail"
-        android:layout_alignStart="@+id/edit_profil_mail"
-        android:layout_alignLeft="@+id/edit_profil_mail"
-        android:layout_marginTop="18dp"
-        android:ems="10"
-        android:hint="@string/profil_number"
-        android:inputType="phone" />
+            <EditText
+                android:id="@+id/edit_profil_nom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edit_profil_titre"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
 
-    <ImageButton
-        android:id="@+id/btn_profil_save"
-        android:layout_width="@dimen/button_margin"
-        android:layout_height="@dimen/button_margin"
-        android:layout_below="@+id/edit_profil_phone"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="18dp"
-        android:background="@drawable/roundedbutton"
-        android:src="@drawable/ic_menu_forward" /><!--image drawable on Right side of Text on button-->
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
 
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="10dp"
+                android:hint="@string/profil_name"
+                android:inputType="textPersonName"
+                android:selectAllOnFocus="true" />
+
+            <EditText
+                android:id="@+id/edit_profil_mail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edit_profil_nom"
+                android:layout_alignStart="@+id/edit_profil_nom"
+                android:layout_alignLeft="@+id/edit_profil_nom"
+                android:layout_marginTop="12dp"
+                android:layout_marginRight="10dp"
+                android:ems="10"
+                android:hint="@string/profil_email"
+                android:inputType="textEmailAddress" />
+
+            <EditText
+                android:id="@+id/edit_profil_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/edit_profil_mail"
+                android:layout_alignStart="@+id/edit_profil_mail"
+                android:layout_alignLeft="@+id/edit_profil_mail"
+                android:layout_marginTop="18dp"
+                android:layout_marginRight="10dp"
+                android:ems="10"
+                android:hint="@string/profil_number"
+                android:inputType="phone" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/btn_profil_save"
+                    android:layout_width="@dimen/button_margin"
+                    android:layout_height="@dimen/button_margin"
+
+
+                    android:layout_gravity="bottom|center"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginBottom="18dp"
+                    android:background="@drawable/roundedbutton"
+                    android:src="@drawable/ic_menu_forward" /><!--image drawable on Right side of Text on button-->
+            </FrameLayout>
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
