--- a/app/src/main/res/layout/fragment_where.xml
+++ b/app/src/main/res/layout/fragment_where.xml
@@ -1,9 +1,9 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    android:layout_margin="10dp"
     tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_where">
 
     <ScrollView
@@ -12,10 +12,10 @@
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:scrollbars="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
 
@@ -25,47 +25,47 @@
                 android:layout_margin="10dp"
                 android:text="@string/fragment_where" />
 
-                <RelativeLayout
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
+
+
+                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/place_autocomplete_fragment"
+                    android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
+                    />
+
+                <TextView
+                    android:id="@+id/fragment_where_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/place_autocomplete_fragment"
                     android:layout_margin="10dp"
-                    android:orientation="horizontal">
+                    android:text="@string/fragment_where_save"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/fragment_where_save"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/fragment_where_text"
+                    android:layout_margin="10dp"
+                    android:text="@string/where_save"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:id="@+id/place_autocomplete_fragment"
-                        android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:layout_margin="10dp" />
-
-                    <TextView
-                        android:id="@+id/fragment_where_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/place_autocomplete_fragment"
-                        android:layout_margin="10dp"
-                        android:text="@string/fragment_where_save"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/fragment_where_save"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/fragment_where_text"
-                        android:layout_margin="10dp"
-                        android:text="@string/where_save"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                </RelativeLayout>
+            </RelativeLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 android:orientation="horizontal">
 
